--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,14 +12,8 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom",
-      "scripthost"
-    ]
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2018", "dom", "scripthost"]
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
